--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
 JWT_SECRET=my-secret-key
-MONGO_URI=mongodb+srv://@cluster0.6tuituu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=
